--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@
 /config/master.key
 /vendor
 /node_modules
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+/.idea
